--- a/ui/style.css
+++ b/ui/style.css
@@ -19,4 +19,9 @@ body {
 .img-medium {
     height: 200px;
 }
-
+   .box{
+           max-width: 900px;
+           margin:200px;
+           color:grey;
+           font-family:sans-serif;
+       } 
